Update generated documentation for version 0.0.2

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>jil-mediatypeformatter
-</title>
+    <title>exira - jil-mediatypeformatter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Exira.Jil is a MediaTypeFormatter based on Jil (https://github.com/kevin-montrose/Jil)"/>
     <meta name="author" content="exira"/>
@@ -33,7 +32,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1><a name="jil-mediatypeformatter" class="anchor" href="#jil-mediatypeformatter">jil-mediatypeformatter</a></h1>
+<h1><a name="jil-mediatypeformatter" class="anchor" href="#jil-mediatypeformatter">jil-mediatypeformatter <a href="https://travis-ci.org/exira/jil-mediatypeformatter"><img src="https://travis-ci.org/exira/jil-mediatypeformatter.png" alt="Travis build status" /></a> <a href="https://www.nuget.org/packages/Exira.Jil/"><img src="http://img.shields.io/nuget/v/Exira.Jil.svg?style=flat" alt="NuGet Status" /></a></a></h1>
 
 <div class="row">
   <div class="span1"></div>
