--- a/release-notes.html
+++ b/release-notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>release-notes</title>
+    <title>exira - jil-mediatypeformatter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Exira.Jil is a MediaTypeFormatter based on Jil (https://github.com/kevin-montrose/Jil)"/>
     <meta name="author" content="exira"/>
@@ -32,6 +32,13 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h4><a name="0-0-2-April-19-2015" class="anchor" href="#0-0-2-April-19-2015">0.0.2 - April 19 2015</a></h4>
+
+<ul>
+<li>Target .NET Framework 4.5</li>
+<li>Depend on FSharp.Core nuget packages</li>
+</ul>
+
 <h4><a name="0-0-1-April-14-2015" class="anchor" href="#0-0-1-April-14-2015">0.0.1 - April 14 2015</a></h4>
 
 <ul>
