--- a/tutorial.html
+++ b/tutorial.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Introducing your project
-</title>
+    <title>exira - jil-mediatypeformatter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Exira.Jil is a MediaTypeFormatter based on Jil (https://github.com/kevin-montrose/Jil)"/>
     <meta name="author" content="exira"/>
